<resources>
    <string name="app_name">QUẢN LÝ TIẾN ĐỘ HỌC TẬP</string>
    <string name="Select1">
        <u>Chọn môn</u>.
    </string>

    <!--    Layout trang chủ-->
    <string name="tv_quanlytiendo">QUẢN LÝ TIẾN ĐỘ HỌC TẬP</string>
    <string name="tv_ttnguoidung">Thông tin người dùng</string>
    <string name="tv_qlmonhoc">Quản lý môn học</string>
    <string name="tv_kqdukien">Kết quả dự kiến</string>
    <string name="tv_thongke">Thống kê</string>
    <string name="tv_thoikhoabieu">Thời khóa biểu</string>

<!--    Layout Điểm Đự kiến-->
    <string name="tv_diemdukien">Điểm dự kiến</string>
    <string name="tv_diemcaithien">Điểm cải thiện</string>
    <string name="tv_chonmonhoc">Chọn môn học:</string>
    <string name="tv_nhapdiemdukien">Chọn điểm cải thiện:</string>
    <string name="dt_nhapketqua">Kết quả</string>
    <string name="dt_chonketqua">Kết quả</string>
    <string name="btn_nhap">Nhập</string>
    <string name="tv_tinchi">Tín chỉ:</string>
    <string name="tv_trungbinhmon">Trung bình môn</string>
    <string name="tv_trungbinhhocki">Trung bình học kì</string>
    <string name="tv_trungbinhtoankhoa">Trung bình khóa</string>

    <!--    Layout thông tin cá nhân-->
    <string name="tv_thongtin">THÔNG TIN</string>
    <string name="tv_ten">Tên người dùng:</string>
    <string name="tv_hocki">Học Kì:</string>
    <string name="btn_luu">LƯU</string>
    <string name="btn_thoat">THOÁT</string>

<!--    Chọn kết quả cải thiện điểm-->
    <string-array name="choice_result">
        <item>A</item>
        <item>B+</item>
        <item>B</item>
        <item>C+</item>
        <item>C</item>
        <item>D+</item>
        <item>D</item>
        <item>F</item>
    </string-array>

<!--    HP-->
    <string name="open">open</string>
    <string name="close">close</string>

<!-- Thống kê -->

    <string-array name="Spinner_mp">
        <item>Học Kì 1 (Năm 1)</item>
        <item>Học Kì 2 (Năm 1)</item>
        <item>Học Kì 3 (Năm 1)</item>
        <item>Học Kì 1 (Năm 2) </item>
        <item>Học Kì 2 (Năm 2)</item>
        <item>Học Kì 3 (Năm 2)</item>
    </string-array>

    <!-- TKB -->

    <string name="dayOfWeek">Tuần</string>
    <string name="single_week">1 Tuần 3-2 ngày</string>
    <string name="double_week">1 Tuần 2-3 ngày</string>
    <string name="select_dialog">Chọn</string>
    <string name="photo_select">Chọn từ danh sách</string>
    <string name="select_all">Tất cả</string>
    <string name="delete">Xóa</string>
    <string name="menu_config">Cài đặt</string>
    <string name="menu_share">Xóa tất cả</string>
    <string name="transparent">Công khai</string>
    <string name="bg_img">Ảnh</string>
    <string name="menu_update">Cập nhật phiên bản</string>

    <string name="menu_apply">Đăng kí</string>

    <string name="course_details">Chi tiết thời khóa biểu</string>
    <string name="set_time">Đặt thời gian</string>

    <string name="course_edit">Thời khóa biểu</string>
    <string name="day_of_week">Tuần %1$d</string>
    <string name="week_of_term_format">%1$s [%2$s]</string>

    <string name="schedule_section">%1$s %2$d-%3$d </string>

    <string name="course_name">Buổi :</string>
    <string name="classroom">Chủ đề :</string>
    <string name="week_of_term">Số tuần :</string>
    <string name="classLength">Số ngày :</string>
    <string name="teacher">Ghi chú :</string>
    <string name="mon">Thứ 2</string>
    <string name="tues">Thứ 3</string>
    <string name="wed">Thứ 4</string>
    <string name="thur">Thứ 5</string>
    <string name="fri">Thứ 6</string>
    <string name="sat">Thứ 7</string>
    <string name="sun">CN</string>
    <string name="menu_append">Nhập vào Excel</string>
    <string name="menu_set_current_week">Đổi số tuần</string>
    <string name="menu_append_class">Đặt lịch</string>
    <string name="menu_import">Nhập từ hệ thống giáo dục</string>

    <string name="edit_course_btn">Chỉnh sửa</string>
    <string name="edit_text_hint"></string>
    <string name="menu_save">Lưu</string>
    <string name="weekOptions">Chọn</string>
    <string name="week_of_term_example">Thí dụ:1,7,9,11&#8211;17,19(Dấu câu tiếng anh)</string>

    <string name="prompt_id">Thẻ học sinh</string>
    <string name="prompt_password">Mật khẩu mở khóa</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="hint_random_code">Mã xác nhận</string>
    <string name="title_activity_login">Đăng nhập hệ thống giáo dục</string>

    <string name="hint_start_time">Thời gian bắt đầu</string>
    <string name="hint_end_time">Thời gian kết thúc</string>

    <string name="menu_set_time">Đặt thời gian</string>
    <string name="menu_delete_time">Xóa tất cả</string>

    <string name="cancel">Hủy</string>
    <string name="yes">Lưu</string>
    <string name="select_week_of_term">Chọn tuần</string>

    <string name="delete_calendar_event">Xóa tất cả</string>

    <string name="select_college">Chọn trường</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Xin chào</string>
</resources>
