<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@android:color/white"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:text="@string/tv_thongtin"
            android:textSize="30sp"
            android:layout_span="2"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginBottom="20dp">

        </TextView>
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/tv_ten"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/tennguoidung"
            android:inputType="text"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </TableRow>
    <TableRow>
        <TextView
            android:text="@string/tv_hocki"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/hocki"
            android:inputType="text"
            android:autofillHints=""
            tools:ignore="LabelFor" />
    </TableRow>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button android:id="@+id/btn_luu"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:text="@string/btn_luu"
            android:textColor="@color/background_color_white"
            android:textSize="15sp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border_btn_blue"
            style="?android:attr/buttonBarButtonStyle" />

        <Button android:id="@+id/btn_quaylai"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:textSize="15sp"
            android:text="@string/btn_thoat"
            android:textColor="@color/background_color_white"

            android:background="@drawable/border_btn_blue"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>


</TableLayout>