<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@android:color/white"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            android:text="@string/tv_diemcaithien"
            android:textSize="25sp"
            android:layout_span="2"
            android:gravity="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginTop="40dp"/>
    </TableRow>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_diemdukien"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:background="@drawable/border_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_diemdukien"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonddk"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/teal_700"
            android:textStyle="bold"
            android:background="@drawable/border_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_diemcaithien"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    <TableRow>

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/tv_trungbinhhocki"
            android:textColor="@color/teal_700"
            android:layout_span="2"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"/>

    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/mt_tbmon"
            android:layout_span="2"
            android:gravity="center"
            android:textColor="@color/item_1"
            android:textStyle="bold"
            android:textSize="30sp"
            android:autofillHints=""
            tools:ignore="LabelFor">
        </TextView>

    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/mt_chonmh"
            android:layout_width="88dp"
            android:layout_height="match_parent"
            android:text="@string/tv_chonmonhoc"
            android:textColor="@color/colorTransparent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spchonmon"/>
    </TableRow>

    <TableRow>
        <TextView
            android:textColor="@color/colorTransparent"
            android:text="@string/tv_nhapdiemdukien"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/chonketqua"
            android:textSize="17sp"
            android:hint="@string/dt_chonketqua"
            android:gravity="center"
            android:inputType="text"
            android:autofillHints=""
            tools:ignore="TextViewEdits" />
    </TableRow>
    <Button
        android:id="@+id/btn_nhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_nhap"
        android:textSize="17sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_btn_blue"
        android:textColor="@android:color/white"
        />
</TableLayout>
