<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:weightSum="10"
        app:layout_constraintBaseline_toBaselineOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="37dp"
                android:gravity="center"
                android:text="@string/tv_quanlytiendo"
                android:textSize="28sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/thongtinnguoidung"
                android:layout_width="211dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="112dp"
                android:layout_marginBottom="12dp"
                android:gravity="left"
                android:text="@string/tv_ttnguoidung"
                android:textColor="@color/teal_700"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />


        </RelativeLayout>
        <ListView
            android:id="@+id/hienthiten_hk"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:textColor="@color/blue"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_height="30dp"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:columnCount="2"
            android:rowCount="3"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:padding="15dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/d2"
                app:cardBackgroundColor="#FFFFFF"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="vertical"
                    tools:ignore="UseCompoundDrawables">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="61dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/m5">
                    </ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="47dp"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tv_qlmonhoc"
                        android:textAlignment="center"
                        android:textSize="20sp">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/d3"
                app:cardBackgroundColor="#FFFFFF"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="61dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/m2">
                    </ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="47dp"
                        android:text="@string/tv_kqdukien"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/d4"
                app:cardBackgroundColor="#FFFFFF"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="61dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/m6">
                    </ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="47dp"
                        android:text="@string/tv_thoikhoabieu"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/d6"
                app:cardBackgroundColor="#FFFFFF"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                app:cardElevation="8dp"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="15dp"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="61dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/m7">
                    </ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="47dp"
                        android:text="@string/tv_thongke"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>